# benchmarks

./: .gitignore  LICENSE  README.md  bench.config.json  bench.js  package-lock.json  package.json
apps/hello-world/: README.md  bench.config.json
apps/hello-world/go/std/: Dockerfile  main.go
apps/hello-world/javascript/nodejs/: bench.config.json  index.js
apps/hello-world/rust/hyper/: Cargo.toml
apps/http-proxy/: README.md  bench.config.json  env.json
apps/http-proxy/go/std/: bench.config.json  main.go
apps/http-proxy/javascript/nodejs/: Dockerfile  (+2 more)
apps/string-operations/: README.md  bench.config.json
hello-world/: .env.example  bench.config.json  docker-compose.yaml
hello-world/go/: Dockerfile
hello-world/go/std/: Dockerfile  main.go
hello-world/nodejs/: index.js  package.json
hello-world/rust/: Cargo.toml  Dockerfile
hello-world/rust/src/: main.rs
http-proxy/: .env.example  README.md  bench.config.json  bench.js  docker-compose.yaml  package-lock.json  package.json
http-proxy/go/: main.go
http-proxy/javascript/nodejs/: .dockerignore  package-lock.json
http-proxy/nginx/: .dockerignore  Dockerfile  nginx.conf
http-proxy/nodejs/: Dockerfile  index.js  package-lock.json  package.json
http-proxy/rust/: .dockerignore  Cargo.toml  Dockerfile
http-proxy/rust/hyper/src/: main.rs
http-proxy/rust/src/: main.rs
tools/: bench.config.json  bench.js  config.js  file.js  results.js  text.js  textTools.js  utils.js
tools/bench/: bench.config.json  bench.js  container.js  metrics.js  run.js  setup.js
tools/result/: result.js  template.js
(+13 files in other folders)
