[package]
name = "http-proxy"
version = "0.1.0"
authors = ["İsmail Hakkı Tekin <ihakkitekin@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.13.0-alpha.4"
hyper-tls = "0.4.0-alpha.4"
tokio = "0.2.0-alpha.6"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.6.1"
bytes = "0.5.1"
futures = "0.3.1"
url = "2.1.0"
